  output a message at package installation regerding the setting of
  sysctl -w net.ipv4.ipfrag_max_dist=0
- Added kgge to metarfilter (icao and st files)
- Added linespoints style (ls) keywords to gnuplot templates in metarfilter
- Revised nbspstatcounters to output stats data in various formats (std, xml,
  csv, csvk) for use locally by e.g., collectd, rrdtool, npstats.
- Added inbsp extension for exporting nbspstatcounters data via web interface
  (for use remotely in, e.g., collectd, rrdtool, npstats)
- Added nbspreconfigure script (mspoolbdb, reconfigure)
- Added nbspstats script
- Revised msgfilter: convert crlf -> nl, corrected README, added options
  for smtp when needed. Revised specification to allow
  <prod_regex><site_regexp> in addition to the old <prod_regex>_<zone_regexp>.
- Added output of logperiods (for stats and qstate) in nbspstatcounters
  and in the "_inbsp/stats" web interface. The script nbspstats was revised
  to accept a "-p <logperiod>" option.
- Fixed problem with filter queue growing with several slaves in
  mempsool mode (spoolslots.c missig a pthred_cond_signal() call).
- In the gpfilter, each decoder is opened with a "permanent" pipe.
- Revised (and corrected) the statistic plots: Added size in fmtoptions
  in inventory.conf (and removed set size in template files), and
  corrected the template setting for the -r option in nbspstatplot1.
- Revised nbspradmap and nbspradmapc such that the later can create
  loops from the individual images.
- Added nbspsatmapc for similar purposes and revised the web server
  to generate radar and sat loops dynamically.
- Fixed error in rstfilter.lib creating sat maps (reported by Bill Dosser);
  check of rstfilter(satmap_regex) should be with uwildmat and not just regex.
- Revised default bundle configuration of gisfilter.
- Revised and corrected: tclupperair, uafilter and wsfilter
- Added rmtfilter (executes filters in remote nodes).