@@ -3,8 +3,12 @@
 #
 
 The rss feeds are generated within the rstfilter and the relevant
-settings apear in "rstfilter.conf". There is very little
-to configure there except disabling the functionality.
+settings apear in "rssfilter.conf". There is very little
+to configure there, except setting the appropriate "server:port"
+combination in the case that the server is behind a firewall.
+The relevant variable to set is "rssfilter(hostport)". The default
+value is the output from [info hostname]:8015, which probably is
+not the appropriate one in most cases.
 
 The mechanism is based on a template system and the template
 files are in the subdirectory "defaults/rss" in the main configuration
