@@ -124,8 +124,8 @@ libexec/nbsp/msgfilter
 libexec/nbsp/trackfilter
 libexec/nbsp/trackfilter.init
 libexec/nbsp/masterfilter
-libexec/nbsp/rmtfilter
-libexec/nbsp/rmtfilter.init
+libexec/nbsp/clusterfilter
+libexec/nbsp/clusterfilter.init
 libexec/nbsp/craftinsert
 libexec/nbsp/filters.init
 libexec/nbsp/filters.lib
@@ -249,8 +249,9 @@ etc/nbsp/dist/msgfilter.rc-ex
 etc/nbsp/dist/msgfilter-subscribers.txt-ex
 etc/nbsp/dist/trackfilter.conf-sample
 etc/nbsp/dist/masterfilter.conf-sample
-etc/nbsp/dist/rmtfilter.conf-sample
-etc/nbsp/dist/rmtfilter.conf-ex
+etc/nbsp/dist/clusterfilter.conf-sample
+etc/nbsp/dist/clusterfilter.conf-ex
+etc/nbsp/dist/clusterfilter-schedule.rc-sample
 etc/nbsp/dist/craftinsert.conf-sample
 etc/nbsp/dist/grib-templates.tgz
 etc/nbsp/dist/metarplot-templates.tgz
