@@ -7,7 +7,7 @@ Standards-Version: 3.7.2
 
 Package: nbsp
 Architecture: any
-Depends: ${shlibs:Depends}, sharutils, libwrap0, libdb4.8, tcl8.5, tcllib, tk8.5, expect, libpng12-0, netpbm, bzip2, libbz2-dev, gnuplot, gifsicle, mapserver-bin
+Depends: ${shlibs:Depends}, sharutils, libwrap0, libdb4.8, tcl8.5, tcllib, tk8.5, libpng12-0, netpbm, bzip2, libbz2-dev, gnuplot, gifsicle, mapserver-bin
 Description: Noaaport Broadcast System Processor
  The Noaaport Broadcast System Processor (nbsp) receives the
  multicast transmission of a noaaport system attached
