@@ -11,7 +11,7 @@ package_build = 1
 rpmroot = /usr/src/redhat
 
 # empty variables will be filled by make
-Summary = Noaaport processor and emwin server
+Summary = Noaaport Broadcast System Processor 
 Name = ${name}
 Version = ${version}
 Release = ${package_build}
@@ -19,7 +19,7 @@ License = BSD
 Group = Applications/Internet
 Source = http://www.noaaport.net/software/${pkgsrc_name}/src/${pkgsrc_name}.tgz
 BuildRoot = ${rpmroot}/BUILD/${pkgsrc_name}/build/rpm/pkg
-Requires = tcp_wrappers-libs db4 db4-utils tcl tcllib tk expect libpng netpbm-progs zlib gnuplot gifsicle
+Requires = tcp_wrappers-libs db4 db4-utils tcl tcllib tk libpng netpbm-progs zlib gnuplot gifsicle
 Conflicts = ${nameclient}
 
 ifeq (${FLAVOR}, opensuse)
@@ -28,5 +28,5 @@ Requires = sharutils tcpd libdb-4_5 db-utils tcl tcllib tk expect libpng netpbm 
 endif
 
 ifeq (${FLAVOR}, centos)
-Requires =  sharutils tcp_wrappers tcl tcllib tk expect libpng netpbm-progs zlib bzip2 gnuplot gifsicle
+Requires =  sharutils tcp_wrappers tcl tcllib tk libpng netpbm-progs zlib bzip2 gnuplot gifsicle
 endif
