@@ -5,7 +5,7 @@
 #
 # Defaults -
 #
-# The variables below can be overriden in the node configuration by
+# The variables below can be overriden per-node node in the configuration:
 #
 #      clusterfilter(filter_dir,<node>))
 #      clusterfilter(sshopts,<node>)
@@ -19,11 +19,17 @@
 ## set clusterfilter(defaults,filter_dir) $common(libdir);
 ## set clusterfilter(defaults,sshopts) "";
 ## set clusterfilter(defaults,fname_uregex) {.*};
+#
+## set clusterfilter(scheduler_enable) 0;
+## set clusterfilter(schedule) [file join $common(confdir) \
+##        "clusterfilter-schedule.rc"];
+## set clusterfilter(schedule_run_period) "minutely";       # run every minute
 
 #
 # Examples - Two working nodes, "dl385a" and "dl385b"
 #
 ## set clusterfilter(nodes) [list "dl385a" "dl385b"];
+#
 ## set clusterfilter(enable,dl385a,gpfilter) 1;
 ## set clusterfilter(enable,dl385a,gisfilter) 2;
 ## set clusterfilter(sshopts,dl385a) [list -p 2222];
