@@ -36,9 +36,13 @@ proc filter_rad_create_nids {rc_varname} {
 
     set status [catch {
 	#
-	# The files are saved without the gempak header/footer (-t)
+	# The files are saved without the gempak header/footer (-t) and
+	# the -w flag is passed to wait for the nids file to be created
+	# before continuing to create the gis files.
 	#
-	filterlib_cspool_nbspfile $seq $fpath $data_savedir $data_savename -t;
+	filterlib_cspool_nbspfile \
+	    $seq $fpath $data_savedir $data_savename -t -w;
+
 	## filterlib_nbspfile $seq $fpath $data_savedir $data_savename -t;
     } errmsg];
 
