@@ -104,4 +104,6 @@
   check of rstfilter(satmap_regex) should be with uwildmat and not just regex.
 - Revised default bundle configuration of gisfilter.
 - Revised and corrected: tclupperair, uafilter and wsfilter
-- Added rmtfilter (executes filters in remote nodes).
+- Added the clusterfilter (executes filters in remote nodes).
+- Revised tclgrads such that Expect is no longer used. (The Expect
+  package is no longer required)
